# kiv-bit-cryptanalysis

./: .gitignore  CMakeLists.txt
daemon-src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ClientSolver.cpp  ClientSolver.h  DaemonManager.cpp  DaemonManager.h  DataLoader.cpp  Opcodes.h  SessionManager.cpp  SessionManager.h  Singleton.h  SmartPacket.cpp  SmartPacket.h  SolveEnums.h  SolveManager.cpp  SolveManager.h  StripWords.cpp  StripWords.h  general.h  main.cpp
win/: kiv-bit-cryptanalysis.sln
win/kiv-bit-cryptanalysis/: kiv-bit-cryptanalysis.vcxproj  kiv-bit-cryptanalysis.vcxproj.filters
win/kiv-bit-cryptanalysis-daemon/: kiv-bit-cryptanalysis-daemon.vcxproj  kiv-bit-cryptanalysis-daemon.vcxproj.filters
win/kiv-bit-cryptanalysis-worker/: kiv-bit-cryptanalysis-worker.vcxproj  kiv-bit-cryptanalysis-worker.vcxproj.filters
worker-src/: Application.cpp  Application.h  CMakeLists.txt  DataHolder.cpp  ResultScore.cpp  Session.cpp  Session.h  SolveEnums.h  Solver.h  SolverManager.cpp  Solver_Atbas.cpp  Solver_Caesar.cpp  Solver_MonoalphaSub.cpp  Solver_Vigenere.cpp  general.h  main.cpp
